Bug 409564 - Filter wave cut off on high amplitudes
Summary: Filter wave cut off on high amplitudes
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Filters (other bugs)
Version First Reported In: 4.2.2
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-07-07 03:45 UTC by vanyossi
Modified: 2021-03-20 00:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Wave filter cut off (85.24 KB, image/png)
2019-07-07 03:45 UTC, vanyossi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description vanyossi 2019-07-07 03:45:00 UTC
Created attachment 121359 [details]
Wave filter cut off

A reddit user reported this

Bounding box is smaller than needed by wave filter on high amplitudes


STEPS TO REPRODUCE
1. Draw Circle
2. Filter > Other > Wave...
3. Set amplitude over 40

Deformation will start to go beyond bounding box cutting of the visible pixels
Comment 1 vanyossi 2021-03-20 00:12:24 UTC
Git commit 335fbba6dd217e09ef901c7eb573f511dcc02e7f by Ivan Yossi.
Committed on 20/03/2021 at 00:11.
Pushed by ivany into branch 'master'.

Reverse direction in wavefilter

M  +3    -3    plugins/filters/wavefilter/wavefilter.cpp
M  +1    -1    plugins/filters/wavefilter/wavefilter.h

https://invent.kde.org/graphics/krita/commit/335fbba6dd217e09ef901c7eb573f511dcc02e7f