Reverse direction in wavefilter

BUG:409564